objects/Team_Members__c/Team_Members__c.object-meta.xml
<CustomObject>
    <label>Team Members</label>
    <nameField>
        <label>Team Members Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SQX_Team_Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>