objects/Team_Members__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <length>22</length>
    <type>Text</type>
</CustomField>