objects/Team_Members__c/fields/Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Team_Members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Members</label>
    <referenceTo>Team_Members__c</referenceTo>
    <relationshipLabel>SQX_Team_Members</relationshipLabel>
    <relationshipName>SQX_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>